--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@vitejs/plugin-react": "^4.3.1",
     "antd": "^5.14.1",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.9",
     "cross-env": "7.0.3",
     "currency.js": "2.0.4",
     "dayjs": "^1.11.10",
     "just-compare": "^2.3.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
@@ -25,7 +27,8 @@
     "redux": "^5.0.1",
     "reselect": "^5.1.0",
     "shortid": "^2.2.16",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "dev": "vite",
